Aggiunto Sfondo Landing Page

--- a/src/main/resources/templates/home/landing-page.html
+++ b/src/main/resources/templates/home/landing-page.html
@@ -49,57 +49,68 @@
                     style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;"><strong>- AutoJaita
                     la
                     Concessionaria del futuro -</strong></h1>
-                <div class="col-12 mt-5 col-md-6">
-                    <br>
-                    <br>
-                    <h4 style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;"><strong>Chi
-                        siamo:</strong></h4>
-                    <p style="font-size: 15px">
-                        Da decenni, AutoJaita è sinonimo di eccellenza nel mondo automobilistico.
-                        Siamo più di un concessionario, siamo una comunità appassionata di esperti automobilistici
-                        dedicati
-                        a fornire un servizio straordinario e veicoli di alta qualità.
-                        La nostra missione è superare le aspettative dei nostri clienti, mettendo a disposizione
-                        un'ampia
-                        gamma di auto
-                        che rispecchiano l'eccellenza del design, dell'innovazione e delle prestazioni. La nostra
-                        squadra di
-                        professionisti
-                        è qui per guidarti in ogni passo del processo di selezione dell'auto perfetta per le tue
-                        esigenze.
-                        Siamo orgogliosi di offrire un'esperienza di acquisto unica, basata su trasparenza, affidabilità
-                        e
-                        dedizione. Con AutoJaita,
-                        non stai solo acquistando un'auto; stai diventando parte di una storia di successo che si
-                        tramanda
-                        da generazioni.
-                    </p>
-                </div>
-                <div class="col-12 col-md-6">
-                    <img src="https://img.freepik.com/free-photo/brand-new-car-ai-generated-image_268835-5688.jpg"
-                         alt="Auto-Arancione">
-                </div>
-                <div class="col-12 col-md-6 pb-2 pt-1">
-                    <img style="width:650px;"
-                         src="https://cdnwp.dealerk.com/eed49ed7/uploads/sites/315/2018/04/acquistare-da-ms-automobili.jpg"
-                         alt="Auto-Arancione">
-                </div>
-                <div class="col-12 col-md-4 mt-3 ps-5 pt-5 text-start">
-                    <h4 style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;"><strong>Perchè
-                        Scegliere AutoJaita?</strong></h4>
-                    <p style="font-size: 15px">Scegliere AutoJaita significa immergersi in un universo automobilistico
-                        di
-                        classe e convenienza.
-                        Con prezzi vantaggiosi e una selezione di veicoli di qualità, offriamo un'esperienza di guida
-                        senza
-                        eguali.
-                        Collaboriamo con partner di fama, assicurando che ogni auto nel nostro showroom soddisfi gli
-                        standard più elevati.
-                        Entra nel mondo di AutoJaita, dove l'eleganza, le prestazioni e l'affidabilità si fondono in
-                        un'offerta unica,
-                        plasmata per soddisfare le tue esigenze automobilistiche.
-                    </p>
-                </div>
+                <div class=" mt-5  bg-image bg-landing">
+                    <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        Chi Siamo?
+                    </button>
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Chi Siamo?</h1>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    Da decenni, AutoJaita è sinonimo di eccellenza nel mondo automobilistico.
+                                    Siamo più di un concessionario, siamo una comunità appassionata di esperti automobilistici dedicati
+                                    a fornire un servizio straordinario e veicoli di alta qualità.
+                                    La nostra missione è superare le aspettative dei nostri clienti, mettendo a disposizione un'ampia
+                                    gamma di auto
+                                    che rispecchiano l'eccellenza del design, dell'innovazione e delle prestazioni. La nostra squadra di
+                                    professionisti
+                                    è qui per guidarti in ogni passo del processo di selezione dell'auto perfetta per le tue esigenze.
+                                    Siamo orgogliosi di offrire un'esperienza di acquisto unica, basata su trasparenza, affidabilità e
+                                    dedizione. Con AutoJaita,
+                                    non stai solo acquistando un'auto; stai diventando parte di una storia di successo che si tramanda
+                                    da generazioni.
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal1">
+                        Perchè Scegliere AutoJaita?
+                    </button>
+                    <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel1" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h1 class="modal-title fs-5" id="exampleModalLabel1">Perchè Scegliere AutoJaita?</h1>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    Scegliere AutoJaita significa immergersi in un universo automobilistico di
+                                    classe e convenienza.
+                                    Con prezzi vantaggiosi e una selezione di veicoli di qualità, offriamo un'esperienza di guida senza
+                                    eguali.
+                                    Collaboriamo con partner di fama, assicurando che ogni auto nel nostro showroom soddisfi gli
+                                    standard più elevati.
+                                    Entra nel mondo di AutoJaita, dove l'eleganza, le prestazioni e l'affidabilità si fondono in
+                                    un'offerta unica,
+                                    plasmata per soddisfare le tue esigenze automobilistiche.
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
             </div>
         </div>
         <div class="container-fluid pb-5 pt-5 bg-light">
