--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -51,6 +51,12 @@ background-color: #87CEEB;
   background-attachment: fixed;
 }
 
+.bg-landing{
+  background-image: url(../esterno-07-1440x495.webp) ;
+  background-size:cover;
+  height: 500px;
+}
+
 main span.animated {
 animation-duration: 2.5s;
 animation-iteration-count: infinite;
